# oc-piloci

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.web  MEMORY.md  PLAN.md  README.ko.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.native.yml  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  publish.yml
clients/js/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
clients/js/src/: client.ts  errors.ts  index.ts  types.ts
clients/js/test/: client.test.ts
clients/python/: README.md  pyproject.toml
clients/python/src/piloci_client/: __init__.py  _async_client.py  _client.py  _errors.py  _models.py
clients/python/tests/: test_async_client.py  test_client.py
deploy/: setup.sh
deploy/nginx/: dev.conf  native.conf
docs/: ADR-001-storage-isolation.md  ADR-014-lancedb-backend.md  WEB_BUILD.md  index.md
scripts/: backfill_memory_titles.py  init-db.py  migrate_consolidate_projects.py  piloci-stop-hook.sh  sync-styleseed.sh
src/piloci/: __init__.py  __main__.py  assistant.py  chat.py  cli.py  cli_files.py  cli_ingest.py  config.py  installer.py  llm.py  main.py  profiling_baseline.py  version.py
src/piloci/api/: audit.py  data_portability.py  distillation_routes.py  ratelimit.py  routes.py  security.py  static.py  team_routes.py  v1.py
src/piloci/auth/: crypto.py  device_pairing.py  install_pairing.py  jwt_utils.py  local.py  middleware.py  oauth.py  password.py  session.py  totp.py
src/piloci/curator/: __init__.py  analyze_queue.py  analyze_worker.py  backlog.py  budget.py  distillation_worker.py  extraction.py  gemma.py  llm_providers.py  periodic.py  prefilter.py  profile.py  queue.py  scheduler.py  (+9 more)
tests/: conftest.py  test_api_audit.py  test_api_data_portability.py  test_api_ingest.py  test_api_readyz.py  test_api_routes_extra.py  test_api_routes_extra2.py  test_api_security.py  test_api_static.py  test_api_v1.py  test_auth_crypto.py  test_auth_jwt.py  test_auth_local.py  test_auth_middleware.py  test_auth_oauth.py  test_auth_oauth_extra.py  test_auth_password.py  test_auth_rate_limits.py  test_auth_session.py  test_auth_session_extra.py  test_auth_totp.py  test_chat.py  test_cli_extra.py  test_cli_files.py  test_cli_ingest.py  test_cli_ingest_extra.py  test_cli_ingest_main.py  test_config.py  test_curator_gemma.py  test_curator_low_spec.py  test_curator_profile.py  test_curator_profile_extra.py  test_curator_session_analyzer.py  test_curator_vault.py  test_curator_worker.py  test_curator_worker_extra.py  test_data_portability.py  test_db_models.py  test_db_session_extra.py  test_device_pairing.py  (+62 more)
web/: DESIGN-HARNESS.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/__tests__/: BrandMark.test.tsx  api.test.ts  utils.test.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: AppShell.tsx  AuthLayout.tsx  AuthedPage.tsx  BrandMark.tsx  DashboardSummaryPanels.tsx  DistillationSettingsPanel.tsx  DistillationStatusPanel.tsx  LLMProviderManager.tsx  LocaleToggle.tsx  MarkdownEditor.tsx  MemoryCard.tsx  MemoryGraphPanel.tsx  NavBar.tsx  PageContainer.tsx  PersonalWorkspaceLayout.tsx  ProjectCard.tsx  ProjectFreshnessBadge.tsx  ProjectKnacksPanel.tsx  ProjectList.tsx  ProjectListView.tsx  ProjectSessionsPanel.tsx  RecentSessionsCard.tsx  RoutePending.tsx  SearchBar.tsx  SidebarNav.tsx  TeamMiniPanel.tsx  ThemeToggle.tsx  TokenManager.tsx  TypingQuotes.tsx  VaultNoteCard.tsx  VaultNoteDetail.tsx  WeeklyDigestCard.tsx  WikiMiniMap.tsx  auth-provider-buttons.tsx
web/engine/: tokens.ts
web/lib/: api.ts  auth.ts  copy.ts  i18n.tsx  time.ts  types.ts  usePageGuard.ts
web/public/: theme-init.js
web/tests-e2e/: login.spec.ts
(+77 files in other folders)
