[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oc-piloci"
version = "0.3.36"
description = "Self-hosted multi-user LLM memory service for Raspberry Pi 5. MCP-compatible."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "piLoci contributors"},
]
keywords = ["mcp", "memory", "llm", "raspberry-pi", "lancedb", "fastembed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "starlette>=0.46.2",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0",
    "httpx>=0.28.0",
    # Vector DB
    "lancedb>=0.6.0",
    "pyarrow>=14",
    # Auth & Security (M2)
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
    "slowapi>=0.1.9",
    # DB (M2)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # Redis (M2)
    "redis[hiredis]>=5.0.0",
    # 2FA / TOTP (M3)
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
embed = [
    "fastembed>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=25.1.0",
    "isort==5.13.2",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
piloci = "piloci.cli:main"
piloci-ingest = "piloci.cli_ingest:main"
oc-piloci = "piloci.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piloci"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["piloci", "piloci_client"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src/piloci --cov-report=term-missing"

[tool.coverage.run]
source = ["src/piloci"]

[tool.coverage.report]
fail_under = 73
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
