[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piloci-client"
version = "0.1.0"
description = "Thin Python SDK for the piLoci self-hosted memory service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["piloci", "memory", "mcp", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/piloci_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["piloci_client"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
